// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Module exports 1`] = `
Object {
  "lookup": Object {
    "getAllCountriesDone": [Function],
    "getAllCountriesInit": [Function],
    "getCountriesDone": [Function],
    "getCountriesInit": [Function],
    "getManufacturersDone": [Function],
    "getManufacturersInit": [Function],
    "getModelsDone": [Function],
    "getModelsInit": [Function],
    "getOsesDone": [Function],
    "getOsesInit": [Function],
    "getReviewTypesDone": [Function],
    "getReviewTypesInit": [Function],
    "getSkillTagsDone": [Function],
    "getSkillTagsInit": [Function],
    "getTypesDone": [Function],
    "getTypesInit": [Function],
  },
}
`;

exports[`lookup.getCountriesDone 1`] = `
Object {
  "payload": Array [
    Object {
      "country": "Afghanistan",
      "countryCode": "AFG",
    },
  ],
  "type": "LOOKUP/GET_COUNTRIES_DONE",
}
`;

exports[`lookup.getCountriesInit 1`] = `
Object {
  "type": "LOOKUP/GET_COUNTRIES_INIT",
}
`;

exports[`lookup.getSkillTagsDone 1`] = `
Object {
  "payload": Array [
    Object {
      "domain": "SKILLS",
      "id": 251,
      "name": "Jekyll",
      "status": "APPROVED",
    },
  ],
  "type": "LOOKUP/GET_SKILL_TAGS_DONE",
}
`;

exports[`lookup.getSkillTagsInit 1`] = `
Object {
  "type": "LOOKUP/GET_SKILL_TAGS_INIT",
}
`;
